# fastapi-nacos

./: .gitignore  README.md  TODO.md  pyproject.toml
conf/: app.yml_example
fastapi_nacos/: __init__.py
fastapi_nacos/core/: __init__.py  config.py  dependencies.py  manager.py  registration.py
fastapi_nacos/http/: http_client.py
fastapi_nacos/models/: config.py
fastapi_nacos/utils/: app_config_utils.py  env_utils.py  log_utils.py
my_fastapi_nacos/http/: http_client.py
