[project]
name = "fastapi-nacos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nacos-sdk-python==2.0.9",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "loguru>=0.7.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ""
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
